Package Name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mock-placeholder",
+  "name": "picture-placeholder",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
